# bigsmiles-rs

./: .gitignore  Cargo.toml  PLAN_HUCKEL.md  README.md  release-plz.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  release-plz.yml
bench-pages/: compare.html
crates/bigsmiles/: CHANGELOG.md  Cargo.toml  README.md
crates/bigsmiles-core/: Cargo.toml
crates/bigsmiles-core/benches/: parser.rs
crates/bigsmiles-core/src/: lib.rs
crates/bigsmiles-core/src/ast/: bigsmiles.rs  mod.rs  stochastic_fragment.rs  stochastic_object.rs
crates/bigsmiles-core/tests/: display.rs  parse.rs
crates/bigsmiles/benches/: parser.rs
crates/bigsmiles/src/: error.rs  parser.rs
crates/bigsmiles/src/ast/: bigsmiles.rs  bond_descriptor.rs
crates/bigsmiles/tests/: errors.rs  segments.rs
crates/opensmiles/: CHANGELOG.md  Cargo.toml
crates/opensmiles/src/: lib.rs  parser.rs
crates/opensmiles/src/ast/: bond.rs  molecule.rs
crates/smiles-core/: Cargo.toml
crates/smiles-core/benches/: parser_benchmarks.rs
crates/smiles-core/src/: ast.rs  error.rs  lib.rs  parser.rs  parser_parallel.rs
crates/smiles-core/src/ast/: aromaticity.rs  atom.rs  bond.rs  chirality.rs  element_data.rs  graph.rs  mod.rs  molecule.rs  node.rs
crates/smiles-core/src/error/: atom.rs  bond.rs  mod.rs  molecule.rs  node.rs  parser.rs
crates/smiles-core/tests/: aromatic.rs  basic_parsing.rs  bonds.rs  bracket_atoms.rs  branches.rs  cycles.rs  display.rs  misc.rs  opensmiles_compliance.rs  stereochemistry.rs  stoichiometry.rs
dev/bench/: data.js  index.html  nav.js
