[workspace]
resolver = "2"
members = [
    "crates/opensmiles",
    "crates/bigsmiles",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Peariforme/bigsmiles-rs"
authors = ["Richard Huot"]
rust-version = "1.70"

[workspace.dependencies]
thiserror = "1"

# Dev dependencies
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
