[package]
name = "bigsmiles-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A BigSMILES parser for polymer notation"
keywords = ["chemistry", "smiles", "bigsmiles", "polymer", "macromolecules"]
categories = ["parser-implementations", "science"]

[dependencies]
smiles-core = { path = "../smiles-core" }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
