[package]
name = "smiles-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A SMILES parser following the OpenSMILES specification"
keywords = ["chemistry", "smiles", "parser", "molecules", "cheminformatics"]
categories = ["parser-implementations", "science"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
