[package]
name = "smiles-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A SMILES parser following the OpenSMILES specification"
keywords = ["chemistry", "smiles", "parser", "molecules", "cheminformatics"]
categories = ["parser-implementations", "science"]

[features]
default = []
parallel = ["rayon"]
huckel-validation = []

[dependencies]
thiserror.workspace = true
rayon = { version = "1.10", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_benchmarks"
harness = false
